# libsvm

./: CMakeLists.txt
src/: svm-predict.c  svm-train.c  svm.cpp
